--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,9 @@
         <ini name="intl.default_locale" value="en"/>
         <ini name="intl.error_level" value="0"/>
         <ini name="memory_limit" value="-1"/>
+        <var name="OP_API_URI" value="" />
+        <var name="OP_API_USERNAME" value="" />
+        <var name="OP_API_PASSWORD" value="" />
     </php>
 
     <testsuites>
